--- a/templates/fish_csv_uploader.html
+++ b/templates/fish_csv_uploader.html
@@ -4,3 +4,8 @@
 {% block module_name %} fish {% endblock %}
 {% block required_fields %} latitude(float), longitude(float), species_name(string), location_site(string), notes(string), category(string), date(yyyy-mm-dd), collector(string), habitat(string) {% endblock %}
 {% block optional_fields%} present(int), absent(int) {% endblock %}
+{% block download_example_button %}
+<a class="btn btn-success"
+   href="{% static "data/fish_data_example.csv" %}"
+   download="data_example.csv">Download</a>
+{% endblock %}
