--- a/templates/fish_csv_uploader.html
+++ b/templates/fish_csv_uploader.html
@@ -1,4 +1,5 @@
 {% extends 'csv_uploader.html' %}
+{% load staticfiles %}
 
 {% block upload_shp_url %} /fish/upload_shp {% endblock %}
 {% block module_name %} fish {% endblock %}
